fix issue with veunex logo not showing correct in small screens

--- a/css/pages/about-me-styles.css
+++ b/css/pages/about-me-styles.css
@@ -266,7 +266,12 @@
 
     #nswt-logo {
         grid-row: 6;
-        grid-column: 1 / 3;
+        grid-column: 1 ;
+    }
+
+    #veunex-logo {
+        grid-row: 6;
+        grid-column: 2;
     }
 
 
